# 250_beginner_se_projects

./: README.md
project_1_Simple_To_Do_List_App/: To_Do_List.json  simpleToDoList.py
project_2_File_Sorter/: FileSorter.py  test_sorter.py
project_3_CAP1_weather_cli_app/: README.md~  test_weather_cli.py  weather_cli.py  weather_cli.py~
project_3_weather_cli_app/: #test_weather_cli.py#  .env  README.md  test_weather_cli.py~  weather_cli.py
project_3_weather_cli_app/weatherApp_venv/: pyvenv.cfg
project_4_CAP2_asynchronous_webscraper/: How Test Functions Work.txt  pyproject.toml
project_4_CAP2_asynchronous_webscraper/src/scraper/: async_scraper.py  products.json  test_scraper.py
project_4_CAP2_asynchronous_webscraper/src/static_pages/: e_com_page_2.html
project_4_CAP_asynchronous_webscraper/src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_4_CAP_asynchronous_webscraper/src/scraper/: server.py
project_4_CAP_asynchronous_webscraper/src/static_pages/: e_com_page_1.html  e_com_page_3.html
