[project]
name = "my-project"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests~=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
